--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
     
     # 先删除旧文件。然后下载完整文件
     - name: 6 下载数据包
-    #  run: |
+      run: |
     #    rm -rf app/src/main/assets/imagefs.txz 
     #    wget -P app/src/main/assets \
     #    https://github.com/ewt45/winlator-fork/releases/download/0.0.0.store/imagefs.txz
